--- a/bebob/svc_controller.vcxproj
+++ b/bebob/svc_controller.vcxproj
@@ -144,6 +144,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\share\fc_drv_ioctl.h" />
+    <ClInclude Include="..\share\fc_drv_share.h" />
     <ClInclude Include="scm_context.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
